# edge-detection

./: .gitignore  CMakeLists.txt  HSC5.pptx  README.md
.devcontainer/: Dockerfile  devcontainer.json
include/: ImageReader.h
include/convolution/: Filter.h  ImageReader.h  ImageWriter.h  Layer.h  LayerAlt.h  SobelLayer.h
include/convolution/internal/: Block.h  Combiner.h  MatrixSelector.h
include/image/: ImageReader.h  ImageWriter.h  Matrix.h
include/max_pooling/: Layer.h
include/pipeline/: Pass.h  Sink.h  Source.h
src/: ConvolutionBlock.cpp  ConvolutionLayer.cpp  ImageReader.cpp  main.cpp
src/convolution/: Filter.cpp  ImageReader.cpp
